Asocia url del repositorio

--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="https://miso-4208-labs.gitlab.io/talleres/taller4.html" target="_blank" rel="noopener noreferrer">Taller 04</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Github</a>
+              <a class="nav-link" href="https://github.com/jhrubiano10/Taller_04_MISO_4208_scraper_Stores" target="_blank" rel="noopener noreferrer">Github</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://jorger.github.io/page/es/" target="_blank" rel="noopener noreferrer">Jorge Rubiano</a>
